public/stylesheets/application.css
body{
  background: #e1e1e1;
  font-family: sans-serif;
  font-weight: 100;
}
a{
  text-decoration: none;
}
.site_title{
  padding: 0px;
  margin: 0px;
  font-weight: 100;
}
.browser_error{
  position: absolute;
  text-align: center;
  top: 40%;
  left: 50%;
  width: 500px;
  height: 100px;
  margin: -50px 0 0 -250px;
}

/***************************************************/
/*                 Welcome Stuff                   */
/***************************************************/
.welcome_container{
  /* center vertically and horizontally */

  position: absolute;
  
  top: 40%;
  left: 50%;
  width: 340px;
  height: 160px;
  margin: -80px 0 0 -175px;


}
  .welcome{
    display: block;
    background: -webkit-gradient(linear, left top, left bottom, from(#222), to(#333));
    background: -moz-linear-gradient(top, #222, #333);

    color: white;
    padding: 20px;
    

    height: 100px;
    width: 300px;
    
    /* left down size spread color */
    -moz-box-shadow: 0px 3px 5px 3px #555;
    -webkit-box-shadow: 0px 3px 5px 3px #555;
    box-shadow: 0px 3px 5px 3px #555;
    
    -moz-border-radius: 10px;
    border-radius: 10px;
    
    border: 5px solid #111;
  }
  
  .choose_turn{
    margin-top: 10px;
    padding-top: 10px;
    border-top: dotted 1px #e1e1e1;
  }
  
  .choose_options{
    padding: 0px;
    text-align: right;
  }
  .choose_options li{
    list-style: none;
    display: inline-block;
    margin-left: 20px;


  }
    /* css button theme from: 
      https://github.com/ubuwaits/css3-buttons/blob/gh-pages/css/buttons.css */
    .choose_options li a span, 
    .reset_game a span{
      float:left;
      /* left down size spread color */
      -moz-box-shadow: 0px 1px 3px 1px #111;
      -webkit-box-shadow: 0px 1px 3px 1px #111;
      box-shadow: 0px 1px 3px 1px #111;
    
    
      background: #eee;
      background: -moz-linear-gradient(0% 100% 90deg, #ccc, #eee);
      background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#eee), to(#ccc));
      border: 1px solid #ccc;
      border-bottom: 1px solid #bbb;
      -moz-border-radius: 3px;
      -webkit-border-radius: 3px;
      border-radius: 3px;
      color: #333;
      font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
      font-size: 11px;
      font-weight: bold;
      line-height: 1;
      padding: 8px 0;
      text-align: center;
      text-shadow: 0 1px 0 #eee;
      width: 75px;
    }
    .choose_options li a span:hover,
    .reset_game a span:hover{
      background: #ddd;
      background: -moz-linear-gradient(0% 100% 90deg, #bbb, #ddd);
      background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ddd), to(#bbb));
      border: 1px solid #bbb;
      border-bottom: 1px solid #999;
      cursor: pointer;
      text-shadow: 0 1px 0 #ddd;
    }
    .choose_options li a span:active,
    .reset_game a span:active{
      border: 1px solid #aaa;
      background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#bbb), to(#888));
      background: -moz-linear-gradient(top, #bbb, #888);


    }
      .choose_options li a,
      .choose_options li a:visited,
      .choose_options li a:active{
        color: black;
      }


/***************************************************/
/*                  Board Stuff                    */
/***************************************************/
.board_container, .overlay_container{
    /* center vertically and horizontally */

  position: absolute;
  
  top: 40%;
  left: 50%;
  width: 500px;
  height: 500px;
  margin: -250px 0 0 -250px;

}

.board, #game_over_overlay{
 background: -webkit-gradient(linear, left top, left bottom, from(#eee), to(#fff));
 background: -moz-linear-gradient(top, #eee, #fff);

 padding: 10px;

  /* left down size spread color */
  -moz-box-shadow: 0px 3px 5px 3px #555;
  -webkit-box-shadow: 0px 3px 5px 3px #555;
  box-shadow: 0px 3px 5px 3px #555;
  
  -moz-border-radius: 10px;
  border-radius: 10px;

}
.square_container{
  display: inline-block;
}

.overlay_container{
  width: 502px;
  height: 500px;
     margin-top: -164px;
  margin-left: -251px;
  z-index: 100px;
    padding: 0px;

}
#game_over_overlay{
  position: relative;
   width: 500px;
  height: 504px;
  padding: 0px;
  margin: 0px 0 0 1px;
  z-index: 100;
  background: #111;
  opacity: 0.8;
  moz-opacity: 0.8;

}
.game_over_state{
  position: absolute;
  top: 40px;
  left: 40px;
  color: #aaa;
  z-index: 1001;
  color: white;

}
.outcome{
  position: absolute;
  text-align: center;
  width: 502px;
  line-height: 500px;
  font-size: 70px;
  color: white;
  z-index: 1002;

}

.reset_game{
  position:absolute;
    width: 502px;

  bottom: 40px;
  left: 362px;
  text-align:right;
 z-index: 1002;
}


.ttt_square{
  width: 137px;
  height: 137px;
  margin: 10px;
  float: left;
  background: -webkit-gradient(linear, left top, left bottom, from(#222), to(#333));
  background: -moz-linear-gradient(top, #222, #333);

  -moz-border-radius: 5px;
  border-radius: 5px;

  /* left down size spread color */
  -moz-box-shadow:inset 0px 1px 2px 1px #000;
  -webkit-box-shadow: inset 0px 1px 2px 1px #000;
  box-shadow: inset 0px 1px 2px 1px #000;

}
.player_take_square{
  font-size: 100px;
  text-align: center;
  line-height: 135px;
  color: white;
  font-weight: 400;
  text-shadow: #000 0px 2px 4px;
}

a .ttt_square:hover{
   background: -webkit-gradient(linear, left top, left bottom, from(#111), to(#222));
   background: -moz-linear-gradient(top, #111, #222);

 
}
a .ttt_square:active{
    background: -webkit-gradient(linear, left top, left bottom, from(#222), to(#111));
    background: -moz-linear-gradient(top, #222, #111);

      /* left down size spread color */
  -moz-box-shadow: 0px 1px 2px 1px #000;
  -webkit-box-shadow:  0px 1px 2px 1px #000;
  box-shadow:  0px 1px 2px 1px #000;
}

